@@ -2,9 +2,10 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.10 [20150110] [svn: r260]
+ChangeLog for sdparm-1.10 [20150113] [svn: r261]
   - add --inhex=FN option for decoding with device present
   - add --pdt=PDT option for use with --inhex=FN
+  - --quiet used twice hides changeable, default + saved
   - point svn:externals to rev 627 of sg3_utils
   - upgrade automake to version 1.14.1 (U14.10)
 
